--- a/.gitignore
+++ b/.gitignore
@@ -47,8 +47,8 @@ yarn-error.log*
 /public/rss/*
 /sitemap.xml
 
-# yarn
-package-lock.json
-# yarn.lock
+# package manager locks (keep package-lock.json for npm, ignore yarn.lock)
+# package-lock.json
+yarn.lock
 
 .notion-api-lock
